--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <% if !@current_user.nil? %>
-  <footer style="text-align: center;">
+  <footer class="center-text">
     Logged in as <%= @current_user.username %>
   </footer>
 <% end %>
