--- a/app/views/static/editor.html.erb
+++ b/app/views/static/editor.html.erb
@@ -13,7 +13,7 @@
 
   <div class="pure-u-1-2">
     <div class="pure-form pure-form-stacked">
-      <textarea id="songdown_editor_input"></textarea>
+      <textarea id="songdown_editor_input" class="songdown-editor"></textarea>
     </div>
   </div>
 
