--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="pure-g">
   <div class="pure-u-1-1">
-    <%= form_for @song, :html => {:class => 'pure-form pure-form-stacked sd-form'} do |f| %>
+    <%= form_for @song, :html => {:class => 'pure-form pure-form-stacked medium-form'} do |f| %>
       <%= f.label :artist %>
       <%= f.text_field :artist, :placeholder => 'Artist' %>
 
@@ -32,7 +32,7 @@
       <%= f.label :song %>
       <%= f.text_area :content,
         :autocomplete => 'off',
-        :id => 'songdown_input_field'
+        :class => 'songdown-editor'
       %>
 
       <p>
