--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -4,11 +4,11 @@
 
 <div class="content">
   <div class="pure-g">
-    <div class="pure-u-2-3">
+    <div class="pure-u-2-3" id="youtube-video">
       <%= embed_youtube(@song.youtube_url) %>
     </div>
 
-    <div class="pure-u-1-3">
+    <div class="pure-u-1-3" id="toolbox">
       <% if @current_user.is_editor? %>
         <%= link_to 'Edit Song', edit_song_path(@song), :class => 'fancy-link' %> |
         <%= link_to 'Delete Song', song_path(@song),
@@ -48,6 +48,10 @@
           :id => 'song_transpose'
         %>
       <% end %>
+
+      <div id="print_song_button" class="pure-button pure-button-primary">
+        Print
+      </div>
     </div>
 
     <div class="pure-u-1-1">
