--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ body {
   text-align: center;
 }
 
-.field_with_errors input {
+.field_with_errors * {
   border-color: red !important;
 }
 
@@ -34,4 +34,8 @@ hr {
   border-color: black;
   border-width: 1px;
   width: 65%;
+}
+
+textarea {
+  resize: vertical;
 }
