--- a/app/views/setlists/_form.html.erb
+++ b/app/views/setlists/_form.html.erb
@@ -1,27 +1,55 @@
-<%= form_for @setlist, :html => {:class => 'pure-form pure-form-stacked medium-form'} do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title, :placeholder => 'Title' %>
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <%= form_for @setlist, :html => {:class => 'pure-form pure-form-stacked big-form'} do |f| %>
+      <% if params[:id] %>
+        <p>
+          <%= link_to 'Back to Setlist', setlist_path(@setlist),
+            :class => 'pure-button pure-button-primary'
+          %>
+        </p>
+      <% else %>
+        <p>
+          <%= link_to 'Back to Setlists', setlists_path,
+            :class => 'pure-button pure-button-primary'
+          %>
+        </p>
+      <% end %>
 
-  <%= f.label :date %>
-  <%= f.date_field :date %>
+      <%= f.label :title %>
+      <%= f.text_field :title, :placeholder => 'Title' %>
+
+      <%= f.label :date %>
+      <%= f.date_field :date %>
 
 
-  <%= f.label :notes %>
-  <%= f.text_area :notes, :id => 'setlist_notes_input' %>
+      <%= f.label :notes %>
+      <%= f.text_area :notes %>
 
-  <p>
-    <%= f.submit :class => 'pure-button pure-button-primary' %>
-  </p>
-<% end %>
+      <%= f.submit :class => 'pure-button pure-button-primary' %>
 
-<% if @setlist.errors.any? %>
-  <h1>Error</h1>
-
-  <ul>
-    <% for error_message in @setlist.errors.full_messages %>
-      <li>
-        <%= error_message %>
-      </li>
+      <% if params[:id] %>
+        <%= link_to 'Delete Setlist', setlist_path(@setlist),
+          :method => 'delete',
+          :class => 'pure-button pure-button-danger',
+          :data => {
+            :confirm => "Are you sure you want to delete \"#{@setlist.title}\"?"
+          }
+        %>
+      <% end %>
     <% end %>
-  </ul>
-<% end %>
+  </div>
+
+  <div class="pure-u-1-2">
+    <% if @setlist.errors.any? %>
+      <h2>Something went wrong:</h2>
+
+      <ul>
+        <% for error_message in @setlist.errors.full_messages %>
+          <li>
+            <%= error_message %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+</div>
