--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -16,16 +16,12 @@
 
     <div class="pure-u-1-3">
       <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
-        <div>
-          <%= link_to 'Edit Setlist', edit_setlist_path(@setlist), :class => 'fancy-link' %> |
-          <%= link_to 'Delete Setlist', setlist_path(@setlist),
-            :method => 'delete',
-            :class => 'fancy-link',
-            :data => {
-              :confirm => "Are you sure you want to delete \"#{@setlist.title}\"?"
-            }
-          %>
-        </div>
+        <%= link_to 'Edit Setlist', edit_setlist_path(@setlist),
+          :class => 'pure-button pure-button-primary'
+        %>
+        <%= link_to 'Edit Songs', setlist_edit_items_path(:setlist_id => @setlist.id),
+          :class => 'pure-button pure-button-primary'
+        %>
       <% end %>
     </div>
 
@@ -62,14 +58,6 @@
           <% end %>
         </tbody>
       </table>
-    </div>
-
-    <div class="pure-u-1-3">
-      <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
-        <%= link_to 'Edit Songs', setlist_edit_items_path(:setlist_id => @setlist.id),
-          :class => 'fancy-link'
-        %>
-      <% end %>
     </div>
   </div>
 </div>
