--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Disable Turbolinks caching because it looks weird to me. No other reason. Really. -->
+    <meta name="turbolinks-cache-control" content="no-cache">
+
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono',
       'data-turbolinks-track' => true
     %>
