Removed some things that shouldn't have been there.

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -7,7 +7,7 @@
     <div class="pure-u-1-2">
       <%= form_tag login_path, :class => 'pure-form pure-form-stacked big-form' do %>
         <%= label_tag :username %>
-        <%= text_field_tag(:username, params[:username] || '', :placeholder => 'Batman') %>
+        <%= text_field_tag(:username, params[:username] || '') %>
 
         <%= label_tag :login_password, 'Password' %>
         <%= password_field_tag(:login_password) %>
@@ -19,10 +19,6 @@
         Don't have an account?
         <%= link_to 'Register', register_path, :class => 'fancy-link' %>
       </p>
-    </div>
-
-    <div class="pure-u-1-2">
-      <%= image_tag 'password.jpg', :class => 'pure-img' %>
     </div>
   </div>
 </div>
