Make that a link rather than a button

--- a/app/views/static/editor.html.erb
+++ b/app/views/static/editor.html.erb
@@ -25,7 +25,7 @@
     <p>
       Use this to make sure songs are right before submitting them.
       <%= link_to 'Syntax Help', help_songdown_syntax_path,
-        :class => 'pure-button pure-button-primary',
+        :class => 'fancy-link',
         :target => '_blank'
       %>
     </p>
