--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  *
+ *= require bootstrap_and_overrides
+ *= require _growlyflash
  *= require pure
  *= require dragula/dist/dragula
  */
