--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
   <body>
     <div id="layout">
+      <%= render 'layouts/noscript_warning' %>
       <%= render 'layouts/menu'%>
 
       <div id="main">
