--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <div id="notifications" data-turbolinks-permanent></div>
     <div id="layout">
       <%= render 'layouts/noscript_warning' %>
       <%= render 'layouts/menu'%>
