Fixed issue with callbacks. Closes #51

--- a/app/views/setlists/add_items.html.erb
+++ b/app/views/setlists/add_items.html.erb
@@ -67,7 +67,7 @@
       <%= form_tag api_search_songs_path,
         :method => 'post',
         :remote => true,
-        :class => 'pure-form',
+        :class => 'pure-form custom-form',
         :id => 'find_song' do
       %>
         <h2>Find a Song</h2>
