--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Disable Turbolinks caching because it looks weird to me. No other reason. Really. -->
+    <!-- Disable Turbolinks caching -->
     <meta name="turbolinks-cache-control" content="no-cache">
 
-    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono',
-      'data-turbolinks-track' => true
-    %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag    'side-menu', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono' %>
+    <%= stylesheet_link_tag 'https://unpkg.com/purecss@1.0.1/build/pure-min.css' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'side-menu', 'data-turbolinks-track' => true %>
+
+    <%= javascript_include_tag 'https://unpkg.com/jquery@3.4.1/dist/jquery.min.js' %>
+    <%= javascript_include_tag 'https://unpkg.com/lodash@4.17.15/lodash.min.js' %>
+    <%#= javascript_include_tag 'https://unpkg.com/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
     <%= csrf_meta_tags %>
   </head>
 
