Use Devise for authentication

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<% if !@current_user.nil? %>
+<% if !current_user.nil? %>
   <footer class="center-text">
-    Logged in as <%= @current_user.username %>
+    Logged in as <%= current_user.username %>
   </footer>
 <% end %>
