--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -2,23 +2,4 @@
   <h1>Songdown</h1>
 </div>
 
-<div class="content">
-  <div class="pure-g">
-    <div class="pure-u-1-2">
-      <%= form_tag login_path, :class => 'pure-form pure-form-stacked big-form' do %>
-        <%= label_tag :username %>
-        <%= text_field_tag(:username, params[:username] || '') %>
-
-        <%= label_tag :login_password, 'Password' %>
-        <%= password_field_tag(:login_password) %>
-
-        <%= submit_tag('Log in', :class => 'pure-button pure-button-primary') %>
-      <% end %>
-
-      <p>
-        Don't have an account?
-        <%= link_to 'Register', register_path, :class => 'fancy-link' %>
-      </p>
-    </div>
-  </div>
-</div>
+<%= link_to 'Sign In', new_user_session_path %>
