--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="pure-u-1-3">
-      <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
+      <% if current_user.owns_setlist?(@setlist) %>
         <%= link_to 'Edit Setlist', edit_setlist_path(@setlist),
           :class => 'pure-button pure-button-primary'
         %>
