--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -10,11 +10,7 @@
 
     <div class="pure-u-1-3" id="toolbox">
       <p>
-        <% if @current_user.is_editor? %>
-          <%= link_to 'Edit Song', edit_song_path(@song),
-            :class => 'pure-button pure-button-primary'
-          %>
-        <% end %>
+        <%= link_to 'Edit Song', edit_song_path(@song), :class => 'pure-button pure-button-primary' %>
 
         <span id="print_song_button" class="pure-button pure-button-primary">
           Print Song
