Add settings form (can only change username for now)

--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -3,9 +3,9 @@
 </div>
 
 <div class="content">
-  <strong>Features:</strong>
-
-  <ul>
-    <li>Change account details (username, password, email)</li>
-  </ul>
+  <%= form_for current_user, url: settings_path, html: { class: 'pure-form pure-form-stacked' } do |f| %>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+    <%= f.submit class: 'pure-button pure-button-primary' %>
+  <% end %>
 </div>
