--- a/app/views/setlists/index.html.erb
+++ b/app/views/setlists/index.html.erb
@@ -11,7 +11,7 @@
 
   <% @setlists.each do |setlist| %>
     <div>
-      <%= link_to setlist.name, setlist_path(setlist), :class => 'fancy-link' %>
+      <%= link_to setlist.title, setlist_path(setlist), :class => 'fancy-link' %>
     </div>
   <% end %>
 </div>
