--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.present? %>
+<% if user_signed_in? %>
   <!-- Menu toggle -->
   <a href="#menu" id="menuLink" class="menu-link">
     <!-- Hamburger icon -->
