--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<% if !current_user.nil? %>
+<% if user_signed_in? %>
   <footer class="center-text">
     Logged in as <%= current_user.name_and_username %>
   </footer>
