--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,19 +1,13 @@
 <%= form_for @song, :html => {:class => 'pure-form pure-form-stacked big-form'} do |f| %>
   <div class="pure-g">
     <div class="pure-u-1-2">
-      <% if params[:id] %>
-        <p>
-          <%= link_to 'Back to Song', song_path(@song),
-            :class => 'pure-button pure-button-primary'
-          %>
-        </p>
-      <% else %>
-        <p>
-          <%= link_to 'Back to Songs', songs_path,
-            :class => 'pure-button pure-button-primary'
-          %>
-        </p>
-      <% end %>
+      <p>
+        <% if params[:id] %>
+          <%= link_to 'Back to Song', song_path(@song), class: 'pure-button pure-button-primary' %>
+        <% else %>
+          <%= link_to 'Back to Songs', songs_path, class: 'pure-button pure-button-primary' %>
+        <% end %>
+      </p>
 
       <%= f.label :artist %>
       <%= f.text_field :artist, :placeholder => 'Artist' %>
@@ -28,20 +22,7 @@
       %>
 
       <%= f.label :key %>
-      <%= f.select :key, [
-        ['C major / A minor', 'C'],
-        ['Db major / Bb minor', 'Db'],
-        ['D major / B minor', 'D'],
-        ['Eb major / C minor', 'Eb'],
-        ['E major / C# minor', 'E'],
-        ['F major / D minor', 'F'],
-        ['Gb major / Eb minor', 'Gb'],
-        ['G major / E minor', 'G'],
-        ['Ab major / F minor', 'Ab'],
-        ['A major / F# minor', 'A'],
-        ['Bb major / G minor', 'Bb'],
-        ['B major / G# minor', 'B'],
-      ] %>
+      <%= f.select :key, song_keys %>
     </div>
 
     <div class="pure-u-1-2">
@@ -64,11 +45,6 @@
         :autocomplete => 'off',
         :class => 'songdown-editor'
       %>
-
-      <p>
-        Don't know what this is?
-        <%= link_to 'Click here', help_songdown_syntax_path, :class => 'fancy-link', :target => '_blank' %>
-      </p>
 
       <p>
         <%= f.submit :class => 'pure-button pure-button-primary' %>
