--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -15,10 +15,7 @@
 
     <div class="pure-u-1-3">
       <% if current_user.owns_setlist?(@setlist) %>
-        <%= link_to 'Edit Setlist', edit_setlist_path(@setlist),
-          :class => 'pure-button pure-button-primary'
-        %>
-        <%= link_to 'Edit Songs', setlist_edit_items_path(:setlist_id => @setlist.id),
+        <%= link_to 'Edit', edit_setlist_path(@setlist),
           :class => 'pure-button pure-button-primary'
         %>
       <% end %>
@@ -44,11 +41,11 @@
         </thead>
 
         <tbody>
-          <% @setlist_items.each do |song| %>
+          <% @setlist.items.find_each do |item| %>
             <tr>
               <td>
-                <%= form_tag setlist_update_song_path(setlist_id: @setlist.id, song_id: song.id), :class => 'pure-form' do %>
-                  <%= hidden_field_tag :setlist_item_id, song.id %>
+                <%= form_tag setlist_update_song_path(setlist_id: @setlist.id, song_id: item.id), class: 'pure-form', method: :get do %>
+                <%= hidden_field_tag :song_id, item.id %>
                   <%= select_tag(:key, options_for_select([
                     ['C major / A minor', 'C'],
                     ['Db major / Bb minor', 'Db'],
@@ -62,25 +59,25 @@
                     ['A major / F# minor', 'A'],
                     ['Bb major / G minor', 'Bb'],
                     ['B major / G# minor', 'B'],
-                  ], song.key), :onchange => 'this.form.submit()') %>
+                  ], item.key), :onchange => 'this.form.submit()') %>
                 <% end %>
               </td>
 
               <td>
-                <%= link_to song.full_name,
-                  song_path(song.song_id, :key => song.key),
+                <%= link_to item.song.full_name,
+                  song_path(item.song_id, :key => item.key),
                   :class => 'fancy-link'
                 %>
               </td>
 
               <td>
                 <%= link_to 'Remove',
-                  setlist_items_path(:setlist_id => @setlist.id, :id => song.id),
+                  setlist_songs_path(:setlist_id => @setlist.id, :id => item.id),
                   :method => 'delete',
                   :class => 'pure-button pure-button-danger',
                   :data => {
                     :confirm =>
-                      "Are you sure you want to remove \"#{song.title}\" from the setlist?"
+                      "Are you sure you want to remove \"#{item.song.title}\" from the setlist?"
                   }
                 %>
               </td>
