--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -14,13 +14,13 @@
       </div>
     </div>
 
-    <% @artists.each do |artist| %>
+    <% @songs.keys.sort.each do |artist| %>
       <div class="pure-u-1-3">
         <fieldset>
           <legend><h2 style="padding: 0 10px;"><%= artist %></h2></legend>
 
           <ul class="songlist">
-            <% @songlist[artist].each do |song| %>
+            <% @songs[artist].each do |song| %>
               <li>
                 <%= link_to song.title, song, :class => 'fancy-link' %>
               </li>
