Add github link

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -9,6 +9,7 @@
 
       <ul>
         <li><%= link_to 'Songdown Syntax', help_songdown_syntax_path, :class => 'fancy-link' %></li>
+        <li><%= link_to 'Songdown Source Code', 'https://github.com/1vasari/rails-songdown', class: 'fancy-link', target: '_blank' %></li>
       </ul>
     </div>
 
